fix:search icons alignments

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/search2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/search2.less
@@ -195,7 +195,7 @@ html#adobeguides-dark-contrast {
       border: none;
       background: none;
       cursor: pointer;
-      padding: 0.75rem;
+      padding: 8px;
       height: 48px;
       width: 48px;
     }
